--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My App</title>
-    <link rel="stylesheet" type="text/css" href="css/myapp.css">
+    <link rel="stylesheet" type="text/css" href="css/yigetooth.css">
   </head>
   <body>
     <div id="header">
@@ -14,6 +14,6 @@
       {{{body}}}
     </div>
 
-    <script type="text/javascript" src="js/myapp.js"></script>
+    <script type="text/javascript" src="js/yigetooth.js"></script>
   </body>
 </html>
