--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>My App</title>
+    <title>Yigetooth</title>
     <link rel="stylesheet" type="text/css" href="css/yigetooth.css">
   </head>
   <body>
     <div id="header">
-        <h1>My Contacts</h1>
+        <h1>Yigetooth</h1>
         <a href="#">Contact List</a> | <a href="#add">New Contact</a>
     </div>
     <br/>
